--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -1,6 +1,14 @@
-$base-font-family:          'Open Sans', sans-serif
-$base-font-color:           rgba(85, 85, 85, 1)
-$base-light-font-color:     rgba(187, 187, 187, 1)
-$base-line-height:          1.5
+$dev-gray:                  #2c2926
+$dev-red:                   #eb3c41
+$dev-green:                 #28b464
+$dev-blue:                  #418cd2
 
-$link-font-color:           rgba(85, 85, 85, 1)
+$base-font-family:          'ProximaNova-Regular', sans-serif
+$display-font-family:       'HelveticaNeue-Bold', sans-serif
+
+$base-font-color:           $dev-gray
+$base-font-color-light:     #fff
+$link-font-color:           $dev-blue
+
+$base-line-height:          1.5
+$display-line-height:       1.3
