--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -2,24 +2,29 @@ html
   font-size: 62.5%
 
 body
+  -webkit-font-smoothing: antialiased
+  -moz-osx-font-smoothing: grayscale
   font-family: $base-font-family
   line-height: $base-line-height
   color: $base-font-color
-  letter-spacing: .05em
-  font-size: 1.6rem
+  font-size: 1.8rem
   font-weight: 300
 
+h1, h2, h3, h4, h5, h6
+  font-family: $display-font-family
+  line-height: $display-line-height
+
 h1
-  font-size: 3.2rem
+  font-size: 4.2rem
 
 h2
-  font-size: 2.4rem
+  font-size: 3.2rem
 
 h3
-  font-size: 2.08rem
+  font-size: 2.4rem
 
 h4
-  font-size: 1.6rem
+  font-size: 1.8rem
 
 h5
   font-size: 1.28rem
@@ -28,10 +33,10 @@ h6
   font-size: 1.12rem
 
 p
-  font-size: 1.6rem
+  font-size: 1.8rem
 
 strong
-  font-weight: 400
+  font-weight: 700
 
 a
   display: inline-block
