Enhance navbar and header

--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -15,7 +15,8 @@
     justify-content: center
 
   h1, h2
-    color: $base-font-color-light
+    color: $base-font-color-white
+    text-shadow: $base-text-shadow
 
 .page
   .header
