--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -1,20 +1,20 @@
 <div class="navbar  navbar--transparent">
   <div class="navbar-wrapper">
 
-    <a href="/" class="logo">
-      <img src="/assets/img/logo_developer_portal_white.svg" alt="ePages Logo">
+    <a href="/">
+      <img src="/assets/img/logo_developer_portal_white.svg" alt="ePages Logo"  class="logo  logo--devportal">
     </a>
 
     <nav class="navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
-          <a href="/" class="navigation__link">API</a>
+          <a href="/" class="navigation__link">Docs</a>
         </li>
         <li class="navigation__item">
           <a href="/" class="navigation__link">Blog</a>
         </li>
         <li class="navigation__item">
-          <a href="/devjobs/" class="navigation__link">Devjobs</a>
+          <a href="/devjobs/" class="navigation__link">Jobs</a>
         </li>
         <li class="navigation__item">
           <a href="/about/" class="navigation__link">About</a>
