Add footer and icons

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -1,14 +1,24 @@
-$dev-gray:                  #2c2926
 $dev-red:                   #eb3c41
 $dev-green:                 #28b464
 $dev-blue:                  #418cd2
 
+$gray-dark:                 #2c2926
+$gray-mid:                  #4a4a4a
+$gray-light:                #9b9b9b
+
 $base-font-family:          'ProximaNova-Regular', sans-serif
 $display-font-family:       'HelveticaNeue-Bold', sans-serif
 
-$base-font-color:           $dev-gray
-$base-font-color-light:     #fff
+$base-font-color:           $gray-dark
+$base-font-color-mid:       $gray-mid
+$base-font-color-light:     $gray-light
+$base-font-color-white:     #fff
 $link-font-color:           $dev-blue
 
 $base-line-height:          1.5
 $display-line-height:       1.3
+
+$base-text-shadow:          0 1px 3px rgba(50,50,50,.4)
+$base-box-shadow:           0 1px 3px rgba(0,37,55,.1)
+
+$base-border:               1px solid #e1e1e1
