--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -7,8 +7,7 @@ body
   font-family: $base-font-family
   line-height: $base-line-height
   color: $base-font-color
-  font-size: 1.8rem
-  font-weight: 300
+  font-size: $base-font-size
 
 h1, h2, h3, h4, h5, h6
   font-family: $display-font-family
