--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -1,3 +1,4 @@
+// General
 $dev-red:                   #eb3c41
 $dev-green:                 #28b464
 $dev-blue:                  #418cd2
@@ -5,20 +6,31 @@ $dev-blue:                  #418cd2
 $gray-dark:                 #2c2926
 $gray-mid:                  #4a4a4a
 $gray-light:                #9b9b9b
+$whitesmoke:                #f7f7f7
+$white:                     #ffffff
 
 $base-font-family:          'ProximaNova-Regular', sans-serif
 $display-font-family:       'HelveticaNeue-Bold', sans-serif
+$code-font-family:          'Roboto Mono', monospace
 
 $base-font-color:           $gray-dark
 $base-font-color-mid:       $gray-mid
 $base-font-color-light:     $gray-light
-$base-font-color-white:     #fff
+$base-font-color-white:     $white
 $link-font-color:           $dev-blue
+
+$document-background-color: $whitesmoke
+
+$base-font-size:            1.8rem
+$code-font-size:            1.6rem
 
 $base-line-height:          1.5
 $display-line-height:       1.3
 
 $base-text-shadow:          0 1px 3px rgba(50,50,50,.4)
-$base-box-shadow:           0 1px 3px rgba(0,37,55,.1)
 
+
+// Cards
+$card-background-color:     $white
 $base-border:               1px solid #e1e1e1
+$base-box-shadow:           1px 1px 3px rgba(0,37,55,.1)
