--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -8,7 +8,7 @@
     {% elsif page.layout == 'post' %}
 
       <h2>{{ page.title }}</h2>
-      <p>{{ page.author }} — {{ page.date }}</p>
+      <p>{{ page.authors }} — {{ page.date | date: "%B %d, %Y" }}</p>
 
     {% elsif page.layout == 'page' %}
 
