--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,16 @@
 
 <html>
   {% include head.html %}
-  <body class="page">
+  <body class="post">
     {% include sections/navbar.html %}
     {% include sections/header.html %}
-    {{ content }}
+    <main>
+      <div class="content-wrapper">
+        <div class="card  card--markdown">
+          {{ content }}
+        </div>
+      </div>
+    </main>
     {% include sections/footer.html %}
   </body>
 </html>
