--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,14 @@
   <body class="post">
     {% include sections/navbar.html %}
     {% include sections/header.html %}
-    {{ content }}
+    <main>
+      <div class="content-wrapper">
+        <div class="card  card--markdown">
+          {{ content }}
+          {% include components/post-share.html %}
+        </div>
+      </div>
+    </main>
     {% include sections/footer.html %}
   </body>
 </html>
