--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -22,5 +22,13 @@
       </ul>
     </nav>
 
+    <div class="navigation__button">
+      <img src="/assets/img/icons/menu_white.svg" alt="Menu Icon">
+    </div>
+
+    <div class="navigation__background"></div>
+
   </div>
 </div>
+
+<script src="/assets/js/navbar.js"></script>
