--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32"> -->
+  <link rel="icon" type="image/png" href="/assets/img/favicon.png" sizes="32x32">
 
   <title>{{ site.title }}</title>
 
