--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -27,10 +27,25 @@ $code-font-size:            1.6rem
 $base-line-height:          1.5
 $display-line-height:       1.3
 
+$base-border:               1px solid #e1e1e1
+
+$base-box-shadow:           1px 1px 3px rgba(0,37,55,.1)
 $base-text-shadow:          0 1px 3px rgba(50,50,50,.4)
+
+$base-transition:          .2s ease-out
 
 
 // Cards
 $card-background-color:     $white
-$base-border:               1px solid #e1e1e1
-$base-box-shadow:           1px 1px 3px rgba(0,37,55,.1)
+$card-border:               $base-border
+$card-box-shadow:           $base-box-shadow
+$card-margin-mobile:        2rem
+$card-margin-desktop:       4rem
+
+// Navbar
+$navbar-height:             80px
+$navbar-background-color:   $gray-dark
+$navbar-border:             1px solid $gray-mid
+
+// Header
+$header-height:             400px
