--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -2,6 +2,10 @@ html
   background-color: $document-background-color
 
   .content-wrapper
-    width: 90%
+    width: 95%
     max-width: 1200px
-    margin: 6rem auto
+    margin: 3rem auto
+
+    +grid-media($grid-medium)
+      width: 90%
+      margin: 6rem auto
