--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -2,10 +2,12 @@
   background-size: cover
   background-position: center center
   width: 100%
-  height: 400px
+  height: $header-height
   display: flex
   align-items: center
   box-shadow: $base-box-shadow
+  padding-top: $navbar-height
+  box-sizing: border-box
 
   &-wrapper
     width: 90%
@@ -18,6 +20,7 @@
   h1, h2, p
     color: $base-font-color-white
     text-shadow: $base-text-shadow
+    text-align: center
 
 .page
   .header
