--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,5 +14,8 @@
       </div>
     </main>
     {% include sections/footer.html %}
+    <script src="/assets/js/posts.js"></script>
+    <script src="/assets/js/lightbox.min.js"></script>
+    <link rel="stylesheet" href="/assets/css/lightbox.css" />
   </body>
 </html>
