--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -51,6 +51,7 @@
       padding: 2rem $card-margin-mobile
       font-family: $code-font-family
       font-size: 1.6rem
+      overflow: scroll
 
       +grid-media($grid-medium)
         padding: 2rem $card-margin-desktop
