Add cross reading html and styles

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -3,6 +3,10 @@ $dev-red:                   #eb3c41
 $dev-green:                 #28b464
 $dev-blue:                  #418cd2
 
+$dev-red-dark:              darken(#eb3c41, 20%)
+$dev-green-dark:            darken(#28b464, 20%)
+$dev-blue-dark:             darken(#418cd2, 20%)
+
 $gray-dark:                 #2c2926
 $gray-mid:                  #4a4a4a
 $gray-light:                #9b9b9b
@@ -30,6 +34,7 @@ $display-line-height:       1.3
 $base-border:               1px solid #e1e1e1
 
 $base-box-shadow:           1px 1px 3px rgba(0,37,55,.1)
+$hover-box-shadow:          3px 3px 3px rgba(0,37,55,.1)
 $base-text-shadow:          0 1px 3px rgba(50,50,50,.4)
 
 $base-transition:          .2s ease-out
