--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,7 @@
           {{ content }}
           {% include components/post-share.html %}
         </div>
+        {% include components/cross-reading.html %}
       </div>
     </main>
     {% include sections/footer.html %}
