Add variables for pagination

--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -54,3 +54,7 @@ $navbar-border:             1px solid $gray-mid
 
 // Header
 $header-height:             400px
+
+// Pagination
+$pagination-disabled-bg:    #e1e1e1
+$pagination-disabled-color: $base-font-color-light
