Update cross reading styles and move to neat

--- a/_includes/components/cross-reading.html
+++ b/_includes/components/cross-reading.html
@@ -4,7 +4,7 @@
              category="UX &amp; Design"
              header-image="blog.jpg"
              title="5 compelling reasons why you should manage your terminology"
-             author="Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit"
+             authors="Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit"
              date="Sep 12, 2017"
              header-position="top" %}
 
@@ -12,7 +12,7 @@
              category="Events"
              header-image="blog.jpg"
              title="5 compelling reasons why you should manage your"
-             author="Birgit"
+             authors="Birgit"
              date="Sep 12, 2017"
              header-position="bottom" %}
 
@@ -20,7 +20,7 @@
              category="API Experience"
              header-image="blog.jpg"
              title="5 compelling reasons why"
-             author="Birgit"
+             authors="Birgit"
              date="Sep 12, 2017" %}
 
 </div>
