--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -64,6 +64,69 @@
         +grid-media($grid-medium)
           padding: 2rem $card-margin-desktop
 
-
         p
           margin: 0
+
+  &--post
+    box-sizing: border-box
+    position: relative
+
+    &:hover
+      box-shadow: $hover-box-shadow
+      transition: $base-transition
+
+    &__header
+      position: relative
+      height: 230px
+      background-size: cover
+
+    &__category
+      position: absolute
+      top: 2rem
+      left: -1rem
+      background-color: $dev-blue
+      color: $white
+      line-height: 1
+      font-weight: bold
+      padding: .5rem 1rem
+      font-size: 1.6rem
+      letter-spacing: .05em
+
+      &:hover
+        background-color: darken($dev-blue, 10%)
+        transition: $base-transition
+
+      &::before
+        content: ''
+        position: absolute
+        left: 0
+        bottom: -1rem
+        width: 0
+        height: 0
+        border-style: solid
+        border-width: 0 1rem 1rem 0
+        border-color: transparent $dev-blue-dark transparent transparent
+
+    &__body
+      padding: 2rem 3rem
+
+    &__title
+      color: $gray-dark
+      padding-bottom: 3.6rem
+
+    &__footer
+      display: flex
+      justify-content: space-between
+      position: absolute
+      bottom: 2rem
+      width: calc(100% - 6rem)
+      color: $gray-light
+
+    &__author
+      text-overflow: ellipsis
+      white-space: nowrap
+      overflow: hidden
+      margin-right: 2rem
+
+    &__date
+      white-space: nowrap
