--- a/_includes/components/post-card.html
+++ b/_includes/components/post-card.html
@@ -1,6 +1,8 @@
 <div class="card  card--post">
-  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{{ include.header-image }}); background-position: center {{ include.header-position }}">
-    <a href="#" class="card--post__category">{{ include.category }}</a>
+  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{% post_header %}); background-position: center {{ include.header-position }}">
+    {% if include.category.size != 0 %}
+      <a href="#" class="card--post__category">{{ include.category }}</a>
+    {% endif %}
   </div>
   <a href="#" class="card--post__body">
     <h3 class="card--post__title">{{ include.title }}</h3>
