--- a/_includes/components/post-card.html
+++ b/_includes/components/post-card.html
@@ -1,5 +1,5 @@
 <div class="card  card--post">
-  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{% post_header %}); background-position: center {{ include.header-position }}">
+  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{% post_header include.header-image %}); background-position: center {{ include.header-position }}">
     {% if include.category.size != 0 %}
       <a href="#" class="card--post__category">{{ include.category }}</a>
     {% endif %}
