Add search bar to navbar

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -8,6 +8,10 @@
     <nav class="navigation">
       <ul class="navigation__list">
         <li class="navigation__item">
+          <div class="navigation__search-button"></div>
+          <input type="search" class="navigation__search-input" placeholder="Search for tags, keywords, etc.">
+        </li>
+        <li class="navigation__item">
           <a href="/" class="navigation__link">Docs</a>
         </li>
         <li class="navigation__item">
