--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -7,26 +7,6 @@
   z-index: 9999
   transition: $base-transition
 
-
-  &--transparent
-    background: transparent
-
-    .navigation__link
-      color: $base-font-color-white
-
-      +grid-media($grid-medium)
-        text-shadow: $base-text-shadow
-
-  &--white
-    background: $white
-    border-bottom: $base-border
-
-    .navigation__link
-      color: $base-font-color-white
-
-      +grid-media($grid-medium)
-        color: $base-font-color
-
   &-wrapper
     width: 90%
     max-width: 1200px
@@ -49,10 +29,6 @@
     z-index: 1
     width: $navigation-width
 
-    &--open
-      left: 0
-      transition: $base-transition
-
     +grid-media($grid-medium)
       background: inherit
       height: inherit
@@ -61,44 +37,149 @@
       width: auto
       left: auto
 
-  .navigation__list
-    display: flex
-    flex-direction: column
+    &--open
+      left: 0
+      transition: $base-transition
 
-    +grid-media($grid-medium)
-      flex-direction: row
+    &__list
+      display: flex
+      flex-direction: column
 
-  .navigation__item
-    +padding(1em null 1em 2em)
-    border-bottom: $navbar-border
+      +grid-media($grid-medium)
+        flex-direction: row
 
-    +grid-media($grid-medium)
-      padding: 0
-      border-bottom: none
+    &__item
+      +padding(1em null 1em 2em)
+      border-bottom: $navbar-border
+      display: inherit
 
-      &:not(:last-child)
-        margin-right: 2rem
+      +grid-media($grid-medium)
+        padding: 0
+        border-bottom: none
 
-  .navigation__link
+        &:not(:last-child)
+          margin-right: 2rem
 
-    &:hover,
-    &:focus,
-    &.active
-      font-weight: bold
+    &__link
 
-  .navigation__button
-    float: right
+      &:hover,
+      &:focus,
+      &.active
+        font-weight: bold
 
-    +grid-media($grid-medium)
+    &__button
+      float: right
+
+      +grid-media($grid-medium)
+        display: none
+
+    &__background
+      +position(absolute, 0 null null 0)
+      width: 100vw
+      height: 100vh
+      background: rgba(0, 0, 0, .4)
       display: none
 
+      +grid-media($grid-medium)
+        display: none
 
-  .navigation__background
-    +position(absolute, 0 null null 0)
-    width: 100vw
-    height: 100vh
-    background: rgba(0, 0, 0, .4)
-    display: none
-
-    +grid-media($grid-medium)
+    &__search-button
+      height: 2.5rem
+      width: 2.5rem
+      background-image: url(/assets/img/icons/search_white.svg)
+      background-position: center
+      background-repeat: no-repeat
       display: none
+
+      +grid-media($grid-medium)
+        display: inline-block
+
+    &__search-input
+      outline: none
+      border: 0
+      font-size: $base-font-size
+      transition: width .2s ease-out
+      width: 15rem
+
+      +grid-media($grid-small)
+        width: 26rem
+
+      +grid-media($grid-medium)
+        width: 0
+        visibility: hidden
+        background: transparent
+        border-bottom: 1px solid $white
+        color: $white
+
+      &--open
+        visibility: visible
+        transition: width .2s ease-out
+        text-shadow: $base-text-shadow
+
+        +grid-media($grid-medium)
+          margin-left: 1rem
+          width: 16rem
+
+        +grid-media($grid-large)
+          width: 30rem
+
+        &::-webkit-input-placeholder
+          font-weight: 100
+
+  &--transparent
+    background: linear-gradient(rgba(25,25,25,.6), rgba(0,0,0,0))
+
+    .navigation
+
+      &__link
+        color: $base-font-color-white
+
+        +grid-media($grid-medium)
+          text-shadow: $base-text-shadow
+
+      &__search-button
+        background-image: url(/assets/img/icons/search_white.svg)
+
+      &__search-input
+        border-bottom: 1px solid $white
+        color: $base-font-color
+
+        +grid-media($grid-medium)
+          color: $white
+
+        &--open
+          text-shadow: 0 0 0
+
+          +grid-media($grid-medium)
+            text-shadow: $base-text-shadow
+
+        &::-webkit-input-placeholder
+          color: $gray-light
+
+          +grid-media($grid-medium)
+            color: lighten($gray-light, 30%)
+
+  &--white
+    background: $white
+    border-bottom: $base-border
+
+    .navigation
+
+      &__link
+        color: $base-font-color-white
+
+        +grid-media($grid-medium)
+          color: $base-font-color
+
+      &__search-button
+        background-image: url(/assets/img/icons/search_gray.svg)
+
+      &__search-input
+        border-bottom: 1px solid $base-font-color
+        color: $base-font-color
+
+        &--open
+          text-shadow: 0 0 0
+
+        &::-webkit-input-placeholder
+          color: $gray-light
