--- a/_includes/components/cross-reading.html
+++ b/_includes/components/cross-reading.html
@@ -6,7 +6,8 @@
              title="5 compelling reasons why you should manage your terminology"
              authors="Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit, Birgit"
              date="Sep 12, 2017"
-             header-position="top" %}
+             header-position="top"
+             url="" %}
 
   {% include components/post-card.html
              category="Events"
@@ -14,13 +15,15 @@
              title="5 compelling reasons why you should manage your"
              authors="Birgit"
              date="Sep 12, 2017"
-             header-position="bottom" %}
+             header-position="bottom"
+             url="" %}
 
   {% include components/post-card.html
              category="API Experience"
              header-image="blog.jpg"
              title="5 compelling reasons why"
              authors="Birgit"
-             date="Sep 12, 2017" %}
+             date="Sep 12, 2017"
+             url="" %}
 
 </div>
