--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -11,7 +11,7 @@
           <a href="/" class="navigation__link">Docs</a>
         </li>
         <li class="navigation__item">
-          <a href="/" class="navigation__link">Blog</a>
+          <a href="/blog/" class="navigation__link">Blog</a>
         </li>
         <li class="navigation__item">
           <a href="/devjobs/" class="navigation__link">Jobs</a>
