Use pagination include on blog layout

--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -7,7 +7,7 @@
     {% include sections/header.html %}
     <main>
       <div class="content-wrapper">
-        {{ content }}
+        {% include components/pagination.html %}
       </div>
     </main>
     {% include sections/footer.html %}
