Add rss feed.xml and icon in the footer

--- a/_includes/sections/footer.html
+++ b/_includes/sections/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-wrapper">
 
     <div class="row  row--logo">
-      <a href="https://epages.com">
+      <a href="https://epages.com" target="_blank">
         <img src="/assets/img/logo_epages_white.svg" alt="ePages Logo" class="logo  logo--epages">
       </a>
     </div>
@@ -16,6 +16,9 @@
       </a>
       <a href="https://youtube.com/channel/{{site.youtube_username}}" target="_blank">
         <img src="/assets/img/icons/youtube_white.svg" alt="YouTube Icon" class="icon  icon--youtube">
+      </a>
+      <a href="/blog/feed.xml" target="_blank">
+        <img src="/assets/img/icons/rss_white.svg" alt="RSS Icon" class="icon  icon--rss">
       </a>
     </div>
 
