Add category in post header

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -91,6 +91,7 @@
       padding: .5rem 1rem
       font-size: 1.6rem
       letter-spacing: .05em
+      box-shadow: $hover-box-shadow
 
       &:hover
         background-color: darken($dev-blue, 10%)
