--- a/_sass/2-components/_header.sass
+++ b/_sass/2-components/_header.sass
@@ -36,3 +36,11 @@
 
     p
       color: $base-font-color-white
+
+      a
+        color: $base-font-color-white
+        text-decoration: none
+
+        &:hover,
+        &:focus
+          text-decoration: underline
