--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -4,7 +4,7 @@
     {% if page.layout == 'post' %}
 
       <h2>{{ page.title }}</h2>
-      <p>{{ page.authors }} — {{ page.date | date: "%B %d, %Y" }}</p>
+      <p>{{ page.authors }} — {{ page.date | date: "%B %d, %Y" }} — <a href="/blog/category/{{ page.category }}">{{ page.category }}</a></p>
 
     {% else %}
 
