Fix navbar searchbox

--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -22,7 +22,7 @@
       height: 3rem
 
   .navigation
-    $navigation-width: 70%
+    $navigation-width: 75%
     +position(absolute, 0 null null (-$navigation-width))
     background: $navbar-background-color
     height: 100vh
@@ -49,7 +49,7 @@
         flex-direction: row
 
     &__item
-      +padding(1em null 1em 2em)
+      padding: 1em
       border-bottom: $navbar-border
       display: inherit
 
@@ -94,15 +94,22 @@
       +grid-media($grid-medium)
         display: inline-block
 
+    &__search-form
+      width: 100%
+
+      +grid-media($grid-medium)
+        width: auto
+
     &__search-input
       outline: none
       border: 0
       font-size: $base-font-size
       transition: width .2s ease-out
-      width: 15rem
-
-      +grid-media($grid-small)
-        width: 26rem
+      width: 100%
+      color: $white
+      background-color: #3f3f3f
+      padding: .4em.8em
+      box-sizing: border-box
 
       +grid-media($grid-medium)
         width: 0
@@ -110,6 +117,7 @@
         background: transparent
         border-bottom: 1px solid $white
         color: $white
+        padding: 0
 
       &--open
         visibility: visible
@@ -141,11 +149,9 @@
         background-image: url(/assets/img/icons/search_white.svg)
 
       &__search-input
-        border-bottom: 1px solid $white
-        color: $base-font-color
 
         +grid-media($grid-medium)
-          color: $white
+          border-bottom: 1px solid $white
 
         &--open
           text-shadow: 0 0 0
@@ -175,8 +181,10 @@
         background-image: url(/assets/img/icons/search_gray.svg)
 
       &__search-input
-        border-bottom: 1px solid $base-font-color
-        color: $base-font-color
+
+        +grid-media($grid-medium)
+          color: $base-font-color
+          border-bottom: 1px solid $base-font-color
 
         &--open
           text-shadow: 0 0 0
