Add a form to the search input

--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -9,7 +9,9 @@
       <ul class="navigation__list">
         <li class="navigation__item">
           <div class="navigation__search-button"></div>
-          <input type="search" class="navigation__search-input" placeholder="Search for tags, keywords, etc.">
+          <form action="/blog/search.html" method="get">
+            <input type="text" class="navigation__search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
+          </form>
         </li>
         <li class="navigation__item">
           <a href="/" class="navigation__link">Docs</a>
