Fix card--post margin bottom bug

--- a/_sass/3-pages/index.sass
+++ b/_sass/3-pages/index.sass
@@ -12,7 +12,9 @@
 
   .card--post
     +grid-column(12)
-    margin-bottom: 4rem
+
+    &:not(:nth-last-child(-n+2))
+      margin-bottom: 4rem
 
     +grid-media($grid-medium)
       +grid-column(6)
