Add text decoration underline to nav items

--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -65,7 +65,7 @@
       &:hover,
       &:focus,
       &.active
-        font-weight: bold
+        text-decoration: underline
 
     &__button
       float: right
