Add navbar and footer to 404 page

--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -3,6 +3,12 @@
 <html>
   {% include head.html %}
   <body class="error-404">
-    {{ content }}
+    {% include sections/navbar.html %}
+    <main>
+      <div class="content-wrapper">
+        {{ content }}
+      </div>
+    </main>
+    {% include sections/footer.html %}
   </body>
 </html>
