Add tagging functionality and section

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,6 +9,7 @@
       <div class="content-wrapper">
         <div class="card  card--markdown">
           {{ content }}
+          {% include components/tags.html %}
           {% include components/post-share.html %}
         </div>
         {% include components/cross-reading.html %}
