Reduce card body padding from 3 to 2 rem

--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -132,7 +132,7 @@
         border-color: transparent $dev-blue-dark transparent transparent
 
     &__body
-      padding: 2rem 3rem
+      padding: 2rem
 
     &__title
       color: $gray-dark
