Change colors to blue and green

--- a/_sass/2-components/_navbar.sass
+++ b/_sass/2-components/_navbar.sass
@@ -65,7 +65,8 @@
       &:hover,
       &:focus,
       &.active
-        text-decoration: underline
+        text-decoration: none
+        color: $beyond-green
 
     &__button
       float: right
@@ -107,7 +108,7 @@
       transition: width .2s ease-out
       width: 100%
       color: $white
-      background-color: #3f3f3f
+      background-color: $navbar-input-background-color
       padding: .4em.8em
       box-sizing: border-box
 
