--- a/_sass/1-config/_variables.sass
+++ b/_sass/1-config/_variables.sass
@@ -2,6 +2,8 @@
 $dev-red:                   #eb3c41
 $dev-green:                 #28b464
 $dev-blue:                  #418cd2
+$beyond-blue:               #1C3646
+$beyond-green:              #4EB7A8
 
 $dev-red-dark:              darken(#eb3c41, 20%)
 $dev-green-dark:            darken(#28b464, 20%)
@@ -32,9 +34,10 @@ $base-line-height:          1.5
 $display-line-height:       1.3
 
 $base-border:               1px solid #e1e1e1
+$base-border-radius:        4px
 
-$base-box-shadow:           1px 1px 3px rgba(0,37,55,.1)
-$hover-box-shadow:          3px 3px 3px rgba(0,37,55,.1)
+$base-box-shadow:           1px 1px 2px rgba(0,37,55,.1)
+$hover-box-shadow:          3px 3px 2px rgba(0,37,55,.1)
 $base-text-shadow:          0 1px 3px rgba(50,50,50,.4)
 
 $base-transition:          .2s ease-out
@@ -43,14 +46,18 @@ $base-transition:          .2s ease-out
 // Cards
 $card-background-color:     $white
 $card-border:               $base-border
+$card-border-radius:        $base-border-radius
 $card-box-shadow:           $base-box-shadow
 $card-margin-mobile:        2rem
 $card-margin-desktop:       4rem
+$card-ribbon-background-color:  $beyond-green
+$card-ribbon-background-color-shade: darken($beyond-green, 10%)
 
 // Navbar
 $navbar-height:             80px
-$navbar-background-color:   $gray-dark
-$navbar-border:             1px solid $gray-mid
+$navbar-background-color:   $beyond-blue
+$navbar-border:             1px solid lighten($navbar-background-color, 10%)
+$navbar-input-background-color:  lighten($navbar-background-color, 10%)
 
 // Header
 $header-height:             400px
