--- a/_includes/components/pagination.html
+++ b/_includes/components/pagination.html
@@ -2,7 +2,7 @@
   {% for post in paginator.posts %}
     {% include components/post-card.html
                category=post.category
-               header-image=post.image
+               header_image=post.header_image
                title=post.title
                authors=post.authors
                date=post.date
