--- a/_includes/sections/header.html
+++ b/_includes/sections/header.html
@@ -1,4 +1,4 @@
-<header class="header" style="background-image: url(/assets/img/blog/headers/{% post_header page.image %}); background-position: center {{ page.header-position }}">
+<header class="header" style="background-image: url(/assets/img/blog/headers/{% post_header page.header_image %}); background-position: center {{ page.header-position }}">
   <div class="header-wrapper">
 
     {% if page.layout == 'post' %}
