Change link color to green

--- a/_sass/1-config/_typography.sass
+++ b/_sass/1-config/_typography.sass
@@ -41,3 +41,6 @@ a
   display: inline-block
   text-decoration: none
   color: $link-font-color
+
+  &:hover
+    color: darken($link-font-color, 10%)
