--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -123,6 +123,7 @@
 
       &:hover
         background-color: $card-ribbon-background-color-shade
+        color: $white
         transition: $base-transition
 
       &::before
