--- a/_sass/2-components/_pagination.sass
+++ b/_sass/2-components/_pagination.sass
@@ -10,6 +10,7 @@
     &:not(&--disabled):hover
       box-shadow: $hover-box-shadow
       transition: $base-transition
+      color: $base-font-color
 
     &--disabled
       background-color: $pagination-disabled-bg
