Style 404 page, remove search from pages, change header_position variable

--- a/_includes/components/pagination.html
+++ b/_includes/components/pagination.html
@@ -3,6 +3,7 @@
     {% include components/post-card.html
                category=post.category
                header_image=post.header_image
+               header_position=post.header_position
                title=post.title
                authors=post.authors
                date=post.date
