--- a/_includes/components/post-card.html
+++ b/_includes/components/post-card.html
@@ -1,5 +1,5 @@
 <div class="card  card--post">
-  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{% post_header include.header_image %}); background-position: center {{ include.header-position }}">
+  <div class="card--post__header" style="background-image: url(/assets/img/blog/headers/{% post_header include.header_image %}); background-position: center {{ include.header_position }}">
     <a href="/blog/category/{{ include.category }}" class="card--post__category">{{ include.category | category_name }}</a>
   </div>
   <a href="{{ include.url }}" class="card--post__body">
