--- a/_layouts/blank.html
+++ b/_layouts/blank.html
@@ -2,13 +2,12 @@
 
 <html>
   {% include head.html %}
-  <body class="error-404">
+  <body class="blank">
     {% include sections/navbar.html %}
-    <main>
+    <main class="main">
       <div class="content-wrapper">
         {{ content }}
       </div>
     </main>
-    {% include sections/footer.html %}
   </body>
 </html>
