--- a/_sass/2-components/_content.sass
+++ b/_sass/2-components/_content.sass
@@ -9,3 +9,22 @@ html
     +grid-media($grid-medium)
       width: 90%
       margin: 6rem auto
+
+  .blank
+    min-height: 100vh
+
+    .main
+      min-height: 100vh
+      background-size: cover
+      background-position: center
+
+      .content-wrapper
+        width: 90%
+        margin-top: 0
+        margin-bottom: 0
+        padding-top: 80px
+        box-sizing: border-box
+        min-height: 100vh
+        display: flex
+        flex-direction: column
+        justify-content: space-between
