--- a/_includes/sections/navbar.html
+++ b/_includes/sections/navbar.html
@@ -7,17 +7,20 @@
 
     <nav class="navigation">
       <ul class="navigation__list">
-        <li class="navigation__item">
-          <div class="navigation__search-button"></div>
-          <form action="/blog/search.html" method="get" class="navigation__search-form">
-            <input type="text" class="navigation__search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
-          </form>
-        </li>
+        {% assign url = page.url | split: '/' %}
+        {% if url[1] == 'blog' %}
+          <li class="navigation__item">
+            <div class="navigation__search-button"></div>
+            <form action="/blog/search.html" method="get" class="navigation__search-form">
+              <input type="text" class="navigation__search-input" placeholder="Search for tags, keywords, etc." name="query" id="search-box">
+            </form>
+          </li>
+        {% endif %}
         <li class="navigation__item">
           <a href="/" class="navigation__link">Docs</a>
         </li>
         <li class="navigation__item">
-          <a href="/blog/" class="navigation__link">Blog</a>
+          <a href="/blog/" class="navigation__link  {% active_menu blog %}">Blog</a>
         </li>
         <li class="navigation__item">
           <a href="/devjobs/" class="navigation__link">Jobs</a>
@@ -37,4 +40,7 @@
   </div>
 </div>
 
+{% if url[1] == 'blog' %}
+  <script src="/assets/js/navbar-search.js"></script>
+{% endif %}
 <script src="/assets/js/navbar.js"></script>
