--- a/_sass/2-components/_cards.sass
+++ b/_sass/2-components/_cards.sass
@@ -166,12 +166,12 @@
     text-align: center
     padding: 20rem 0
     box-sizing: border-box
-    background-image: url(/assets/img/blog/pages/search.jpg)
+    // background-image: url(/assets/img/blog/pages/search.jpg)
     background-size: cover
     background-position: center
 
     h3
       line-height: 1
-      color: $white
-      text-shadow: $base-text-shadow
+      // color: $white
+      // text-shadow: $base-text-shadow
       font-size: 4.2rem
